maxon-bin/specs/fragments/stdlib-autodiscovery.wrong-arg-count.1.test
// Test: stdlib-autodiscovery.wrong-arg-count.1
function main() returns int
    return trunc(Math.pow(2.0))
end 'main'
---
MaxoncStderr: ```
Semantic Error: temp_fragment.maxon:3:18
Missing required argument for parameter 'exponent'
  Add: exponent = <value>

  3 |     return trunc(Math.pow(2.0))
    |                  ^
```
---
// IR: N/A (compiler error test)
---
